[package]
name = "Topdf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.4.0"
futures = "0.3.31"
genpdf = { version = "0.2.0", features = ["images"] }
html2text = "0.16.5"
iced = "0.14.0"
image = "0.25.9"
pulldown-cmark = "0.13.0"
rfd = "0.16.0"
roxmltree = "0.21.1"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = ["full"] }
zip = "7.0.0"

[dependencies.chrono]
version = "0.4"

[dependencies.log]
version = "0.4"

[dependencies.fern]
version = "0.7"

[dependencies.webbrowser]
version = "1.0"
